--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bulma": "^0.9.4",
     "next": "12.2.5",
+    "node-sass": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "solc": "^0.8.16",
